syntax = "proto3";

package user;

option go_package = "./user";

message UserPO {
  int64 FollowCount = 1; // 关注总数
  int64 FollowerCount = 2; // 粉丝总数
  int64 UserId = 3; // 用户id
  bool IsFollow = 4; // true-已关注，false-未关注
  string Name = 5; // 用户名称
}

message UserInfoReq{
  int64 query_id = 1;
  int64 user_id = 2;
}

message UserInfoReply{
  int64   id = 1;
  string  name = 2;
  int64   follow_count = 3;
  int64   follower_count = 4;
  bool    is_follow = 5;
}

message LoginReq{
  string username=1;
  string password=2;
}
message LoginReply{
  int64   user_id=1;
  string  token=2;
}
message RegisterReq{
  string username=1;
  string password=2;
}
message RegisterReply{
  int64 user_id=1;
  string token=2;
}

message CheckAuthReq{
  string token=1;

}
message CheckAuthReply{
  bool authed =1;
  int64 authedId = 2;
}

message CheckIsFollowReq{
  int64 follower_id = 1;
  int64 following_id = 2;
}

message CheckIsFollowResp{
  bool isFollow = 1;
}

message GetFollowingCountReq{
  int64 user_id = 1;
}

message GetFollowingCountResp{
  int64 count = 1;
}

message GetFollowerCountReq{
  int64 user_id = 1;
}

message GetFollowerCountResp{
  int64 count = 1;
}

message GetFollowerListReq{
  int64 user_id = 1;
  int64 query_id = 2;
}

message GetFollowerListResp{
  repeated UserPO users = 1;
}

message GetFollowingListReq{
  int64 user_id = 1;
  int64 query_id = 2;
}
message GetFollowingListResp{
  repeated UserPO users = 1;
}

service User {
  rpc getUser(UserInfoReq) returns(UserInfoReply);
  rpc login(LoginReq) returns (LoginReply);
  rpc register(RegisterReq) returns (RegisterReply);
  rpc checkAuth(CheckAuthReq) returns (CheckAuthReply);
  rpc checkIsFollow(CheckIsFollowReq) returns (CheckIsFollowResp);
  rpc getFollowingCount(GetFollowingCountReq) returns (GetFollowingCountResp);
  rpc getFollowerCount(GetFollowerCountReq) returns (GetFollowerCountResp);
  rpc getFollowerList(GetFollowerListReq) returns (GetFollowerListResp);
  rpc getFollowingList(GetFollowingListReq) returns (GetFollowingListResp);
}